# byteqc

./: .clang-format  .gitignore  LICENSE  README.md  __init__.py  setup.py
cucc/: README.md  __init__.py  buffer.py  ccsd.py  ccsd_lambda.py  ccsd_rdm.py  ccsd_t.py  culib.py  dfccsd.py  diis.py
cucc/test/: ccsd_t.py  cucc.py  makerdm.py
cump2/: README.md  __init__.py  dfkmp2.py  dfmp2.py  dfmp2_grad.py
cump2/test/: mp2.py  mp2_gamma_point.py  mp2_grad.py
cuobc/: README.md  __init__.py  setup.py
cuobc/lib/: CMakeLists.txt  __init__.py  int3c.py  int4c.py
cuobc/lib/gint/: CMakeLists.txt  config.h  cuda_alloc.cuh  fill_ints.cu  g2e.c  g2e.cu  g2e.h  g2e_root2.cu  g2e_root3.cu  gint.h  nr_fill_ao_ints.cu  pair_data.c  reduce.cu  roots_for_x0.cuh  rys_roots.cu  rys_roots.cuh  rys_xw.cuh
cuobc/lib/gvhf/: CMakeLists.txt  contract_jk.cu  contract_jk.cuh  g2e.cu  g2e_root2.cu  g2e_root3.cu  nr_jk_driver.cu
cuobc/scf/: __init__.py  hf.py
cuobc/test/: eri_trans.py  int4c.py  jk.py  scf.py
cupbc/: README.md  __init__.py  int3c2e.py  setup.py
cupbc/df/: ft_ao.py  int3c.py  rsdf.py  rsdf_direct_helper.py  rsdf_direct_jk.py  rsdf_jk.py
cupbc/dft/: __init__.py  krks.py  krks_ksymm.py
cupbc/lib/: CMakeLists.txt  config.h  cuda_alloc.cuh  gint.h
cupbc/lib/gint/: CMakeLists.txt  nr_fill_ao_ints.cu
cupbc/lib/gpuaft/: CMakeLists.txt  ft_ao.cu  ft_ao.h  ft_ao_GTO.cu  ft_ao_bvk.cu  ft_ao_bvk_ext.h  ft_ao_bvk_ins1.cu  ft_ao_bvk_ins2.cu  ft_ao_bvk_ins3.cu  ft_ao_bvk_ins4.cu  ft_ao_bvk_ins5.cu  ft_ao_bvk_ins6.cu  ft_ao_bvk_ins7.cu  ft_ao_latsum.cu  ft_ao_latsum_ext.h  ft_ao_latsum_ins1.cu  ft_ao_latsum_ins2.cu  ft_ao_latsum_ins3.cu  ft_ao_latsum_ins4.cu  ft_ao_latsum_ins5.cu  ft_ao_latsum_ins6.cu  ft_ao_latsum_ins7.cu  ft_ao_template.cu  time_balance_helper.jl
cupbc/lib/pbc_gpu/: CMakeLists.txt  fill_int2e.cu  fill_int2e.cuh  fill_ints_sr.c  fill_ints_sr.cu  fill_ints_sr.h  g2e.cu  get_Rcuts.cu  get_Rcuts.cuh  linalg.cuh  rys_roots.cu  util.cu  util.cuh  write_int3c.cu
cupbc/scf/: __init__.py  khf.py  khf_ksymm.py
cupbc/test/: dumpj3c.py  getconfig.py  krks.py  large.py  rsdf.py  vjvk.py
embyte/: README.md  Setting.py  __init__.py
embyte/ERI/: eri_trans.py
embyte/Framework/: BNO_building.py  RDM1_building.py  SIE.py  SIE_helper.py  __init__.py  high_level_process.py  low_level_process.py
embyte/Localization/: __init__.py  iao.py  meta_lowdin.py
embyte/Solver/: __init__.py
embyte/Solver/gpu_ccsd_solver/: __init__.py  cuccsd_solver.py
embyte/Solver/gpu_mp2_solver/: cump2_solver.py
embyte/Tools/: fragment.py  logger.py  symm_operation.py  tool_lib.py
embyte/example/1_Quick_start_water_dimmer_test/: SIE_test.py
embyte/example/2_PBC_example_water@BN/: 1_HF_PBC_cpu.py  2_SIE_PBC.py
embyte/example/3_E_int_cal_water@coronene/: 1_HF.py  2_MP2.py  3-1_SIE.py  3-2_SIE_with_symm.py  README.md
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/: README.md
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/CO2@CPO-27-Mg/: 1_HF.py  2_MP2.py  3_SIE.py  CO2+6B_cluster.xyz
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/CO@CPO-27-Mg/: 1_HF.py  2_MP2.py  3_SIE.py  CO+6B_cluster.xyz
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/CO@MgO/: 1_HF_PBC.py  2_MP2_PBC.py  3_SIE_PBC.py
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/Organic_mol@coronene/: 1_DFT_geometry_opt.py  2_HF.py  3_MP2.py  4_SIE.py
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/Organic_mol@coronene/Geometry/: coronene+acetone.xyz  coronene+acetonitrile.xyz  coronene+dichloromethane.xyz  coronene+ethanol.xyz  coronene+ethylacetate.xyz  coronene+toluene.xyz
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/water@graphene/1_E_int_calculation/: 1-1_HF_OBC.py  1-2_HF_PBC.py  2-1_MP2_OBC.py  2-2_MP2_PBC.py  3-1_SIE_OBC.py  3-2_SIE_PBC.py
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/water@graphene/2_Water_rotation_and_distance_opt/: 1_HF.py  2_MP2.py  3_SIE.py
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/water@graphene/3_Geometry_relaxation/: 1_DFT_geometry_opt.py  2_E_int_calculation.py  constraints
embyte/example/Script_for_Advancing_Surface_Chemistry_with_Large-Scale_Ab-Initio_Quantum_Many-Body_Simulations/water@graphene/Geometry/: PAH10_0-leg.xyz  PAH2_0-leg.xyz  PAH4_0-leg.xyz  PAH6_0-leg.xyz  PAH8_0-leg.xyz
lib/: README.md  __init__.py  array.py  file.py  linalg.py  linalg_old.py  multigpu.py  utils.py
